[package]
name = "balloon_hash"
version = "0.1.0"
edition = "2021"
description = "A secure WebAssembly-based implementation of Balloon Hashing (RFC 9197)"
license = "MIT"
repository = "https://github.com/leessang10/balloon_hash"
rust-version = "1.70.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
sha2 = "0.10.8"
hmac = "0.12"
rand = "0.8.5"
getrandom = { version = "0.2.12", features = ["js"] }
rayon = "1.8"
wasm-bindgen-test = "0.3.39"

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
